@@ -1,5 +1,6 @@
 Adminer dev:
 MySQL: Display default values of binary columns
+MariaDB: Don't display NULL as default value (regression from 5.0.0)
 PostgreSQL PDO: Escape bytea values (bug #218)
 
 Adminer 5.0.4 (released 2025-03-11):
@@ -85,7 +86,7 @@ SQLite: Show all supported pragmas in Variables
 MS SQL: Allow altering table in non-default schema (bug #405)
 MS SQL: Fix default values (bug #732, bug #733)
 MS SQL: Fix length of nvarchar columns
-Editor: PDO: Select value of foreign key in edit (bug #847)
+Editor PDO: Select value of foreign key in edit (bug #847)
 Mobile devices: Use device width
 
 Adminer 4.16.0 (released 2025-02-20):
